# GroundStation-Prototype

./: .gitignore  CMakeLists.txt  README.md
data/: RocketData.json
src/: DATA_PROCESSING.cpp  DATA_PROCESSING.h  GPS_BOX.h  GUI.cpp  GUI.h  main.cpp
